feat: add icons - linkedin, github, instagram, and youtube.

--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
 	},
 	"dependencies": {
 		"@emailjs/browser": "^3.11.0",
+		"@fortawesome/fontawesome-svg-core": "^6.7.1",
+		"@fortawesome/free-brands-svg-icons": "^6.7.1",
+		"@fortawesome/free-regular-svg-icons": "^6.7.1",
+		"@fortawesome/free-solid-svg-icons": "^6.7.1",
+		"@fortawesome/react-fontawesome": "^0.2.2",
 		"@react-three/drei": "^9.65.5",
 		"@react-three/fiber": "^8.12.2",
 		"@types/three": "^0.150.2",
+		"fortawesome": "^0.0.1-security",
 		"framer-motion": "^10.12.4",
 		"maath": "^0.5.3",
 		"react": "^18.2.0",
